cleaned up my devise-token-auth mess, fixed layout bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,8 +14,8 @@ body {
 }
 
 .headerBox {
-  padding: 20px;
-  margin-top: 30px;
+  padding: 12px;
+  margin-top: 20px;
   border: 1px solid grey;
   border-radius: 25px;
   background-color: rgb(52, 214, 214);
